fixing dark mode toggle with img

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,3 +1,5 @@
+/* start toggle dark mode css */
+
 .js-toggle-wrapper {
     display: table;
     margin: 0 auto;
@@ -100,8 +102,13 @@
     box-shadow: 0px 0px 5px 5px rgb(255, 167, 196);
   }
 body.dark-mode, 
-body.dark-mode main * {
+body.dark-mode main *{
     background-color: rgb(28 28 30);
     color:#eee;
-    filter: invert(100%)
+    filter: invert(1) hue-rotate(180deg)
 }
+body.dark-mode img {
+    filter: invert(1) hue-rotate(180deg)
+}
+
+/* end toggle dark mode css */
